# spa-en-ruedas

./: admin_routes.py  ai_service.py  app.py  chat_routes.py  gemini_service.py  google-credentials-global.json  init_db.py  main.py  models.py  models_sql.py  pyproject.toml  replit.nix  routes.py  routes_new.py  services.py  services_sql.py  utils.py  utils_new.py
attached_assets/: Pasted--command-initialize-platform-for-migration-objective-Use-this-Replit-instance-to-full-1744063026546.txt  Pasted--command-unify-chat-design-and-functions-objective-Unificar-el-dise-o-y-comportamient-1744062510321.txt  Pasted--command-unify-chat-design-and-functions-objective-Unify-the-chat-design-and-behavior-1744062568580.txt  Pasted-Creaci-n-del-Sitio-Web-Spa-en-Ruedas-con-Sistema-de-Reservaci-n-y-Pagos-en-Replit-Crea-una-aplica-1743805049503.txt
static/css/: chat.css  style.css  styles.css
static/js/: booking.js  calendar.js  chat.js  firebase-config.js  main.js  payment.js
templates/: about.html  base.html  booking.html  calendar.html  calendario.html  chat.html  chat_updated.html  confirmacion.html  confirmation.html  contact.html  contacto.html  detalle_reserva.html  detalle_servicio.html  error.html  index.html  nosotros.html  pago.html  payment.html  reservar.html  services.html  servicios.html  verificar_reserva.html
