[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-mail>=0.10.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-cors>=5.0.1",
    "werkzeug>=3.1.3",
    "stripe>=12.0.0",
    "flask-wtf>=1.2.2",
    "openai>=1.70.0",
    "google-generativeai>=0.8.4",
    "anthropic>=0.49.0",
    "pillow>=11.1.0",
]
